# shelly-ssh

./: .gitignore  README.md  index.html  package-lock.json  package.json  shelly_v3.html  vite.config.ts
.github/workflows/: release.yml
docs/: handover.md  research-architecture.md
src/: App.tsx  i18n.ts  index.css  main.tsx  renderer.tsx  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/downloads/: .claude.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  db.rs  file_jobs.rs  lib.rs  local_term.rs  main.rs  ssh.rs  update.rs
src/components/: AgentPanel.tsx  CommandPalette.tsx  ConnectDialog.tsx  ContextDock.tsx  LocalTerminal.tsx  SettingsDialog.tsx  Sidebar.tsx  TerminalView.tsx  UpdateDialog.tsx
src/lib/: ai.ts  commands.ts  db.ts  files.ts  local.ts  ssh.ts  theme.ts  update.ts
