[package]
name = "shelly"
version = "0.1.0"
edition = "2021"

[lib]
name = "shelly_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri    = { version = "2", features = [] }
serde    = { version = "1", features = ["derive"] }
serde_json = "1"
russh    = "0.48"
russh-keys = "0.48"
tokio    = { version = "1", features = ["full"] }
async-trait = "0.1"
uuid         = { version = "1", features = ["v4"] }
portable-pty = "0.8"
