[package]
name = "shelly"
version = "0.3.0"
edition = "2021"

[lib]
name = "shelly_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri    = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde    = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
keyring = "3"
russh    = "0.48"
russh-keys = "0.48"
russh-sftp = "2"
tokio    = { version = "1", features = ["full"] }
async-trait = "0.1"
uuid         = { version = "1", features = ["v4"] }
portable-pty = "0.8"
